--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -25,7 +25,7 @@
   flex-direction: column;
   justify-content: center;
   gap: 10px;
-  padding: 60px;
+  padding: 30px;
   border-radius: 10px;
   border: 2px solid white;
   transition: 0.4s;
@@ -33,16 +33,16 @@
 }
 .services-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 40px;
   margin-bottom: 80px;
 }
 .services-format h3 {
-  font-size: 28px;
+  font-size: 20px;
   font-weight: 600;
 }
 .services-format h2 {
-  font-size: 28px;
+  font-size: 20px;
   font-weight: 800;
   background: linear-gradient(270deg, #df8908 50%, #b415ff 100%);
   background-clip: text;
@@ -51,8 +51,8 @@
 }
 .services-format p {
   color: #d4d4d4;
-  font-size: 24px;
-  line-height: 40px;
+  font-size: 19px;
+  line-height: 20px;
   max-width: 300px;
 }
 .services-readmore {
