--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -93,6 +93,10 @@
     transform: scale(1.12);
     transition: 0.5s;
 }
+.about-left img {
+    width: 100%;
+    height: 100%;
+}
 @media(max-width:768px) {
     .about {
         gap: 80px;
