--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -6,6 +6,9 @@
 }
 .hero img {
   margin-top: 150px;
+  border-radius: 50%;
+  width: 250px;
+  height: 250px;
 }
 .hero h1 {
   text-align: center;
