--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -25,7 +25,7 @@
 .hero p {
   width: 50%;
   text-align: center;
-  font-size: 15px;
+  font-size: 17px;
   line-height: 25px;
 }
 .hero-action {
@@ -47,6 +47,8 @@
   border-radius: 50px;
   border: 2px solid #fff;
   cursor: pointer;
+  text-decoration: none;
+  color: #fff;
 }
 .hero-connect:hover {
   border: 2px solid white;
