--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
   padding: 0;
 }
 body {
-  height: 100vh;
-  background: #161513;
+  height: 500vh;
+  background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);;
   color: white;
   font-family: "outfit";
 }
