--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -34,7 +34,7 @@
 }
 .mywork-container img:hover {
     transform: scale(1.10);
-    border: 4px solid #ff00ff;
+    border: 4px solid #9333ea;
     border-radius: 10px;
     transition: 0.3s;
 }
