--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -164,4 +164,22 @@
       font-size: 16px;
     }
   }
-  
+
+  @media (max-width: 480px) {
+    .about {
+      margin: 50px 20px;
+      gap: 40px;
+    }
+
+    .about-title h1 {
+      font-size: 42px;
+    }
+
+    .about-left-text {
+      font-size: 16px;
+    }
+
+    .about-achievement h1 {
+      font-size: 32px;
+    }
+  }
