--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -173,3 +173,28 @@
         padding: 15px 40px;
     }
 }
+
+@media(max-width:480px) {
+    .contact {
+        margin: 40px 20px;
+        gap: 40px;
+    }
+
+    .contact-title h1 {
+        font-size: 38px;
+    }
+
+    .contact-section {
+        padding: 20px;
+        gap: 32px;
+    }
+
+    .contact-left h1 {
+        font-size: 40px;
+    }
+
+    .contact-left p {
+        font-size: 16px;
+        line-height: 28px;
+    }
+}
