--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -143,7 +143,8 @@
 
 @media (max-width: 768px) {
   .navbar {
-    margin: 20px 40px;
+    margin: 16px 24px;
+    width: calc(100% - 48px);
   }
 
   .nav-actions {
@@ -157,16 +158,18 @@
   .nav-mob-open {
     display: block;
     position: fixed;
-    right: 30px;
-    width: 28px;
+    right: 20px;
+    width: 26px;
   }
 
   .nav-mob-close {
     display: block;
     position: relative;
-    top: 30px;
-    left: 290px;
-    width: 30px;
+    top: 24px;
+    left: auto;
+    margin-left: auto;
+    margin-right: 16px;
+    width: 26px;
   }
 
   .nav-menu {
@@ -176,7 +179,7 @@
     top: 0;
     gap: 30px;
     background-color: var(--bg-primary);
-    width: 350px;
+    width: min(320px, 80vw);
     height: 100%;
     z-index: 2;
     transition: 0.5s;
@@ -187,8 +190,28 @@
 
   .nav-menu li {
     font-size: 26px;
-    padding-left: 80px;
+    padding-left: 40px;
     flex-direction: row;
     gap: 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .navbar {
+    margin: 12px 16px;
+    width: calc(100% - 32px);
+  }
+
+  .nav-mob-open {
+    right: 16px;
+  }
+
+  .nav-menu {
+    width: 80vw;
+  }
+
+  .nav-menu li {
+    font-size: 20px;
+    padding-left: 24px;
   }
 }
