--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background: var(--shadow);
+  background: var(--bg-tertiary);
 }
 
 ::-webkit-scrollbar-thumb {
